--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.13.4",
-    "vue": "^3.5.27"
+    "chart.js": "^4.5.1",
+    "vue": "^3.5.27",
+    "vue-chartjs": "^5.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
